nunaliit2-js/src/main/js/nunaliit2/css/basic/n2.schema.css
.n2_localize_fallback {
	font-style:italic;	
}

.n2_localize_fallback_lang {
	color:#ff7777;	
}

.n2schema_array_item {
	position: relative;
}

.n2schema_array_add, .n2schema_array_item_delete, .n2schema_array_item_down {
	display: inline-block;
	width: 16px;
	height: 16px;
	margin: 0px;	
	padding: 0px;
	border: none;
}

.n2schema_array_add {
	background: url(tree/icons.png) no-repeat;
	background-position: 0px 0px;
	float: right;
}

.n2schema_array_add:hover {
	background-position: -16px 0px;
}

.n2schema_array_item_delete {
	position: absolute;
	right: 0px;
	top: 0px;
	background: url(tree/icons.png) no-repeat;
	background-position: -160px 0px;
	float: right;
}

.n2schema_array_item_delete:hover {
	background-position: -176px 0px;
}

.n2schema_array_item_down {
	position: absolute;
	right: 0px;
	top: 16px;
	background: url(tree/icons.png) no-repeat;
	background-position: -64px 0px;
	float: right;
}

.n2schema_array_item_down:hover {
	background-position: -80px 0px;
}

.n2schema_array_item_wrapper {
	position: absolute:
	left: 0px;
	right: 16px;
	top: 0px;
	bottom: 0px;
	min-height: 40px;
}

.n2schema_referenceDelete {
	display: inline-block;
	width: 0px;
	height: 0px;
	padding: 15px 15px 0px 0px;
	background: url(images/x_icon_naked_15.png) no-repeat;
}

.n2schema_referenceDelete:hover {
	background-position: -15px 0px;
}

.n2schema_help_date {
	display: inline-block;
	width: 0px;
	height: 0px;
	padding: 15px 15px 0px 0px;
	background: url(images/question_icon_naked_15.png) no-repeat;
}

.n2schema_help_date:hover {
	background-position: -15px 0px;
}

.n2schema_field_container {
	position: relative;
}

.n2schema_help_wiki {
	position:absolute;
	top: 17px;
	right: 7px;
	width: 0;
	height: 0;
	margin: 0;
	border: 0;
	padding: 15px 15px 0px 0px;
	background: url(images/question_icon_naked_15.png) no-repeat;
}

.n2schema_help_wiki:hover {
	background-position: -15px 0px;
}

.n2help_content {
	max-width: 500px;
}

